Add pseudo-CSS styling module
This commit introduces a new mechanism for styling UIs. While it
can work with core and widget APIs, it is significantly easier
to use with the toolkit module. Therefore, there are 2 demos
which demonstrate how to use with and without toolkit, and
an additional demo which shows how to use with custom components.

The CSS mechanism is inspired from Textual and supports
selectors, background color, font weight, pseudo-classes, padding,
border style and alignment.